tester/testsuite/bad/bad010.jl
int main() {
        if (true)
                return;
	;
        return 1;
}
